--- a/src/plugins/finalcutpro/hud/panels/search/html/panel.html
+++ b/src/plugins/finalcutpro/hud/panels/search/html/panel.html
@@ -27,6 +27,8 @@
 					playAfterFind: document.getElementById("playAfterFind").checked,
 					loopSearch: document.getElementById("loopSearch").checked,
 					openProject: document.getElementById("openProject").checked,
+					wholeWords: document.getElementById("wholeWords").checked,
+					matchWords: document.getElementById("matchWords").checked,
 				},
 			}
 			postMessage(result);
@@ -42,15 +44,9 @@
 			<span class="label">{{ i18n("find") }}:</span>
 		</th>
 		<th>
-			<input id="searchField" class="search" type="text" name="search" style="width: 400px" onchange="sendMessage('update');" />
-			<script>
-				document.getElementById("searchField").addEventListener("keyup", function(event) {
-				  if (event.keyCode === 13) {
-					event.preventDefault();
-					sendMessage('findNext');
-				  }
-				});
-			</script>
+			<form onsubmit="sendMessage('findNext');" action="javascript:void(0);">
+				<input id="searchField" class="search" type="text" name="search" style="width: 400px" onchange="sendMessage('update');" />
+			</form>
 		</th>
 		<th>
 			<a id="history" href="#" class="button" style="width:15px; padding: 2px 15px;" onclick="sendMessage('history');">🕓</a>
@@ -61,7 +57,14 @@
 			<span class="label">{{ i18n("searchIn") }}:</span>
 		</th>
 		<th>
-			<select id="column" name="column" style="width: 115px;" onchange="sendMessage('update');">{* options *}</select>
+			<select id="column" name="column" style="width: 200px;" onchange="sendMessage('update');">{* options *}</select>
+		</th>
+	</tr>
+	<tr>
+		<th style="width: 100px;">
+		</th>
+		<th>
+			<label><input type="checkbox" id="matchWords" value="true" onchange="sendMessage('matchWords');"> {{ i18n("matchWords") }}</label>
 		</th>
 	</tr>
 	<tr>
@@ -69,6 +72,13 @@
 		</th>
 		<th>
 			<label><input type="checkbox" id="matchCase" value="true" onchange="sendMessage('matchCase');"> {{ i18n("matchCase") }}</label>
+		</th>
+	</tr>
+	<tr>
+		<th style="width: 100px;">
+		</th>
+		<th>
+			<label><input type="checkbox" id="wholeWords" value="true" onchange="sendMessage('wholeWords');"> {{ i18n("wholeWords") }}</label>
 		</th>
 	</tr>
 	<tr>
