--- a/src/plugins/core/midi/prefs/html/rows.html
+++ b/src/plugins/core/midi/prefs/html/rows.html
@@ -83,12 +83,12 @@
 						<option {{selected}} value="">{{i18nNone}}</option>
 						{%
 							local commandTypes = {
-								["noteOff"] = i18nNoteOff,
+								--["noteOff"] = i18nNoteOff,
 								["noteOn"] = i18nNoteOn,
-								["polyphonicKeyPressure"] = i18nPolyphonicKeyPressure,
+								--["polyphonicKeyPressure"] = i18nPolyphonicKeyPressure,
 								["controlChange"] = i18nControlChange,
-								["programChange"] = i18nProgramChange,
-								["channelPressure"] = i18nChannelPressure,
+								--["programChange"] = i18nProgramChange,
+								--["channelPressure"] = i18nChannelPressure,
 								["pitchWheelChange"] = i18nPitchWheelChange,
 							}
 							for a, b in pairs(commandTypes) do
