--- a/src/plugins/core/midi/prefs/html/panel.html
+++ b/src/plugins/core/midi/prefs/html/panel.html
@@ -229,7 +229,6 @@
 		}
 	}
 </script>
-
 <table style="width: 100%; text-align: left; vertical-align: text-bottom; padding-top: 10px;">
 	<tr>
 		<th style="width: 40%;"><span style="font-weight:bold; font-size:1.17em; padding-left: 20px;">{{ i18nMidiEditor }}</span></th>
@@ -245,7 +244,7 @@
 				{% end %}
 			</select>
 		</span></th>
-		<th style="width: 8%;"><span class="midiGroupSelect"><span style="font-weight:normal; font-size:13px;">Bank: </span>
+		<th style="width: 8%;"><span class="midiGroupSelect"><span style="font-weight:normal; font-size:13px;">{{ i18nBank }}: </span>
 			<select id="midiSubGroupSelect" style="width: 50px;" onchange="updateMIDIGroup()">
 				{%
 				for i=1, numberOfSubGroups do
@@ -260,5 +259,4 @@
 		<th style="width: 1.2%;"></th>
 	</tr>
 </table>
-
 {(html/controls.html, context)}
