--- a/src/plugins/core/preferences/manager/html/panels.html
+++ b/src/plugins/core/preferences/manager/html/panels.html
@@ -36,6 +36,12 @@
 					document.getElementById(id).checked = value;
 				}
 			}
+
+			function changeValueByID(id, value) {
+				if (document.getElementById(id) !== null) {
+					document.getElementById(id).value = value;
+				}
+			}
 		</script>
 	</head>
 	<body>
