--- a/src/plugins/core/midi/prefs/html/panel.html
+++ b/src/plugins/core/midi/prefs/html/panel.html
@@ -214,6 +214,22 @@
 		}
 	}
 
+	function updateMIDIBankLabel() {
+		try {
+			var result = {
+				id: "midiPanelCallback",
+				params: {
+					type: "updateBankLabel",
+					groupID: document.getElementById("midiGroupSelect").value + document.getElementById("midiSubGroupSelect").value,
+					bankLabel: document.getElementById("midiBankLabel").value,
+				},
+			}
+			postMessage(result);
+		} catch(err) {
+			alertErrorMessage(err);
+		}
+	}
+
 	function updateMIDIGroup() {
 		try {
 			var result = {
@@ -231,7 +247,7 @@
 </script>
 <table style="width: 100%; text-align: left; vertical-align: text-bottom; padding-top: 10px;">
 	<tr>
-		<th style="width: 40%;"><span style="font-weight:bold; font-size:1.17em; padding-left: 20px;">{{ i18nMidiEditor }}</span></th>
+		<th style="width: 20%;"><span style="font-weight:bold; font-size:1.17em; padding-left: 20px;">{{ i18nMidiEditor }}</span></th>
 		<th style="width: 30%; text-align: right;"><span class="midiGroupSelect"><span style="font-weight:normal; font-size:13px;">{{ i18nApplication }}: </span>
 			<select id="midiGroupSelect" style="width: 150px;" onchange="updateMIDIGroup()">
 				{%
@@ -256,7 +272,10 @@
 				{% end %}
 			</select>
 		</span></th>
-		<th style="width: 1.2%;"></th>
+		<th style="width: 16%;"><span style="font-weight:normal; font-size:13px; padding-left:5px;">Label: </span>
+			<input type="text" id="midiBankLabel" class="midiLabel" value="{{ bankLabel }}" onchange="updateMIDIBankLabel()" placeholder="None">
+		</th>
+		<th style="width: 1%;"></th>
 	</tr>
 </table>
 {(html/controls.html, context)}
