--- a/src/plugins/core/midi/prefs/html/panel.html
+++ b/src/plugins/core/midi/prefs/html/panel.html
@@ -272,8 +272,8 @@
 				{% end %}
 			</select>
 		</span></th>
-		<th style="width: 16%;"><span style="font-weight:normal; font-size:13px; padding-left:5px;">Label: </span>
-			<input type="text" id="midiBankLabel" class="midiLabel" value="{{ bankLabel }}" onchange="updateMIDIBankLabel()" placeholder="None">
+		<th style="width: 16%;"><span style="font-weight:normal; font-size:13px; padding-left:5px;">{{ i18nLabel }}: </span>
+			<input type="text" id="midiBankLabel" class="midiLabel" value="{{ bankLabel }}" onchange="updateMIDIBankLabel()" placeholder="{{ i18nNone }}">
 		</th>
 		<th style="width: 1%;"></th>
 	</tr>
