Fixed bug in Stream Deck Preferences Panel

--- a/src/plugins/core/streamdeck/prefs/html/panel.html
+++ b/src/plugins/core/streamdeck/prefs/html/panel.html
@@ -269,7 +269,7 @@
 				{% end %}
 			</select>
 		</span></th>
-		<th style="width: 8%;"><span class="touchBarGroupSelect"><span style="font-weight:normal; font-size:13px;">{{ i18n("bank") }}: </span>
+		<th style="width: 8%;"><span class="streamDeckGroupSelect"><span style="font-weight:normal; font-size:13px;">{{ i18n("bank") }}: </span>
 			<select id="streamDeckSubGroupSelect" style="width: 50px;" onchange="updateStreamDeckGroup()">
 				{%
 				for i=1, numberOfSubGroups do
