Various Fixes & Improvements
- Improved `cp.dev.findUnusedLanguageStrings()`
- Removed unused English language strings.
- Moved some hardcoded strings into i18n.
- `plugins.finalcutpro.timeline.preferences.backgroundRender` now just
relies on preferences, rather than GUI scripting.
- General tidy up.
- Closes #1992

--- a/src/plugins/core/tangent/prefs/html/controls.html
+++ b/src/plugins/core/tangent/prefs/html/controls.html
@@ -3,7 +3,7 @@
 		<table class="tangent">
 			<thead>
 				<tr>
-					<th class="tangentRowFavourite">Identification</th>
+					<th class="tangentRowFavourite">{{ i18n("identification") }}</th>
 					<th class="tangentRowAction">{{ i18n("action") }}</th>
 					<th class="tangentRowActionButton"></th>
 				</tr>
