--- a/src/plugins/core/midi/prefs/html/panel.html
+++ b/src/plugins/core/midi/prefs/html/panel.html
@@ -247,7 +247,7 @@
 </script>
 <table style="width: 100%; text-align: left; vertical-align: text-bottom; padding-top: 10px;">
 	<tr>
-		<th style="width: 20%;"><span style="font-weight:bold; font-size:1.17em; padding-left: 20px;">{{ i18nMidiEditor }}</span></th>
+		<th style="width: 10%;"><span style="font-weight:bold; font-size:1.17em; padding-left: 20px;">{{ i18nMidiEditor }}</span></th>
 		<th style="width: 30%; text-align: right;"><span class="midiGroupSelect"><span style="font-weight:normal; font-size:13px;">{{ i18nApplication }}: </span>
 			<select id="midiGroupSelect" style="width: 150px;" onchange="updateMIDIGroup()">
 				{%
@@ -272,7 +272,7 @@
 				{% end %}
 			</select>
 		</span></th>
-		<th style="width: 16%;"><span style="font-weight:normal; font-size:13px; padding-left:5px;">{{ i18nLabel }}: </span>
+		<th style="width: 16%; ; text-align: right;"><span style="font-weight:normal; font-size:13px; padding-left:5px;">{{ i18nLabel }}: </span>
 			<input type="text" id="midiBankLabel" class="midiLabel" value="{{ bankLabel }}" onchange="updateMIDIBankLabel()" placeholder="{{ i18nNone }}">
 		</th>
 		<th style="width: 1%;"></th>
